# SWORD-SIMP

./: .gitignore  README.md  analyze_crop.sh  analyze_crops.py  augment.py  balancing_analyze.py  balancing_analyze.sh  balancing_discard_files.py  balancing_discard_files.sh  cluster_job.sh  cluster_setup.sh  crops.txt  dataset.yaml  download.py  export_paintings.py  export_paintings.sh  extract_bboxes.py  extract_bouding_boxes.jsx  generate_crops.py  pyproject.toml  reduce_val_size.py  reduce_val_size.sh  reduce_val_size_discard.sh  requirements.txt  separate_crops.py  separate_crops.sh  setup.sh  setup_env.sh  sliding_window.py  sliding_window_metrics.py  test_sliding_window.sh  train.py  train.sh  validate_checkpoint.py  validate_checkpoint.sh  visualize_crops.sh  visualize_yolo_bboxes.py
coco_evaluator/: __init__.py  bounding_box.py  coco_evaluator.py  enumerators.py  general_utils.py
dataset/all/labels/: Giovanni_di_Nicola_Madonna_in_trono_col_Bambino_e_donatore.txt  Traino_S_Domenico_Centre_Bottom.txt  Traino_S_Domenico_Left.txt  Traino_S_Domenico_Right.txt  Universita_Aurificum.txt
datatset/all/labels/: Cecco_di_pietro_Crocifissione_Centre.txt  Cecco_di_pietro_Crocifissione_Left.txt  Cecco_di_pietro_Crocifissione_Right.txt  Traino_S_Domenico_Centre_Top.txt  Turino_Vanni_Battesimo.txt
