[project]
description = ""
authors = [
    {name = "Josh Bruegger", email = "josh@bruegger.it"},
]
dependencies = [
    "albumentations",
    "gdown",
    "matplotlib",
    "numpy",
    "opencv-python",
    "psd-tools",
    "pytz",
    "pandas",
    "super-gradients @ git+https://github.com/Deci-AI/super-gradients.git@3d7a81ed595b7345a6745481ebfd41c4903b191e",
    "wandb",
    "scikit-learn",
    "tqdm",
    "natsort",
    "pyyaml",
    "pathlib",
    "pyink",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}